# TAI-ImageSimilarity

./: README.md
classfier/: ImgCondComp  alphabet.py  classifier.py  ctx.py  fcm.py  nccdC.py  ncdC.py
quant_faces/s01/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s02/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s03/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s04/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s05/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s06/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s07/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s08/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s09/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s10/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s11/: 01.pgm  02.pgm  03.pgm  04.pgm  05.pgm  06.pgm  07.pgm  08.pgm  09.pgm  10.pgm
quant_faces/s12/: 01.pgm  (+9 more)
results/: ncd_results.csv  results.csv
solution/: ImgCondComp  classifier.py  nccdC.py
src/: CMakeLists.txt  camera.py  imageProcessing.cpp  imageProcessing.h
src/camera/: cameraRecog.py
src/classfier/: fcm.py
src/classifier/: alphabet.py  ncdC.py  pre_processing.py
(+681 files in other folders)
